@@ -32,7 +32,7 @@ librpmio_la_SOURCES = \
 	argv.c digest.c fts.c macro.c rpmdav.c \
 	rpmhook.c rpmio.c rpmlog.c rpmlua.c rpmmalloc.c \
 	rpmpgp.c rpmrpc.c rpmsq.c rpmsw.c strcasecmp.c stubs.c url.c ugid.c
-librpmio_la_LDFLAGS = -release 4.3 $(LDFLAGS) \
+librpmio_la_LDFLAGS = -release 4.4 $(LDFLAGS) \
 	@WITH_BEECRYPT_LIB@ \
 	@WITH_LUA_LIB@ \
 	$(top_builddir)/file/src/libmagic.la \
